@@ -1,3 +1,6 @@
+  * 2012-10-30 fimex-0.39.2
+    * vertical-interpolation invalidating data below ocean floor
+    * vertical interpolation fixing axis (positive down) of depth 
   * 2012-10-15 fimex-0.39.1
     * backport to boost-0.32
     * avoid problems with older gcc or icc when using constant class members
